// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportStructureTreeItem should return the correct children for the "ExternalModuleImport" import 1`] = `
Array [
  Object {
    "ctor": "ImportSpecifierStructureTreeItem",
    "label": "extImp",
  },
]
`;

exports[`ImportStructureTreeItem should return the correct children for the "NamedImport" import 1`] = `Array []`;

exports[`ImportStructureTreeItem should return the correct children for the "NamedImport" import 2`] = `
Array [
  Object {
    "ctor": "ImportSpecifierStructureTreeItem",
    "label": "(default) default",
  },
  Object {
    "ctor": "ImportSpecifierStructureTreeItem",
    "label": "spec",
  },
]
`;

exports[`ImportStructureTreeItem should return the correct children for the "NamespaceImport" import 1`] = `
Array [
  Object {
    "ctor": "ImportSpecifierStructureTreeItem",
    "label": "namespace",
  },
]
`;

exports[`ImportStructureTreeItem should return the correct children for the "StringImport" import 1`] = `Array []`;

exports[`ImportsStructureTreeItem should return the children for the imports 1`] = `
Array [
  Object {
    "ctor": "ImportStructureTreeItem",
    "label": "lib",
  },
]
`;
